Architectural Pattern for PAPERS
I've started writing notes on the architectural patterns used by PAPERS,
in particular the MVC (Model View Controller) Pattern.

--- a/Notes/Architectural Patterns or Styles/Architectural Styles or Patterns.tex
+++ b/Notes/Architectural Patterns or Styles/Architectural Styles or Patterns.tex
@@ -42,5 +42,13 @@ Often times source code needs to be organised so that clear roles, responsibilit
 \item Interpreter
 \end{itemize}
 
+\subsection{Architectural Patterns for the PAPERS System}
+\subsubsection{Model View Controller}
+\begin{itemize}
+\item{Background}
+\paragraph
+In the Model-View-Controller Pattern, an interactive application is divided into three parts: the Model is an object representing the data and activities, the View displays information to the user and the Controller offers a way to change the state of the Model.
+\end{itemize}
+
 
 \end{document}
