--- a/Notes/Architectural Tactics/Architectural Tactics.tex
+++ b/Notes/Architectural Tactics/Architectural Tactics.tex
@@ -60,14 +60,15 @@
 		\end{itemize}
 		\item Scalability
 		\begin{itemize}
-			\item Ability for multiple external systems to connect to the system's API.
-			\item The system should be able to support a large amount of historical document entries being added to the database.
 			
 			\item Tactics
 			\begin{itemize}
 
-				\item Increase capacity of communication channels
-				\item Thread pooling
+				\item Increasing capacity of communication channels
+					
+					\begin{itemize}
+						\item Users will access the system through a website front-end on a web server maintained by the department. The site will be browser independent in order to increase communication channels. The Android system will also be used as a replacement for the website ans vice versa which allow use of mobile phones or tablets.
+					\end{itemize}
 
 			\end{itemize}
 						
