--- a/Documentation/FinalPDF.tex
+++ b/Documentation/FinalPDF.tex
@@ -273,6 +273,128 @@
 			\item The system is required to be concurrent and make use of concurrent methods specifically in it's functionality, allowing up to a minimum of a hundred concurrent users to be active at the same time
 		\end{itemize}
 		
+		\subsection{Reference Architecture and frameworks}\label{sec: ReferencArchitecture}
+In this section we will discuss the reference architecture and frameworks that will be used in the P.A.P.E.R system.
+	\subsubsection{An object-relational mapper}\label{subsec: ORM}
+	Object-relational mapper is a technique of converting data between incompatible systems by means of object orientated programming. For example the conversion of database attributes into a database object. This allow the interacting object-orientated language to manipulate this database object with ease, in essence the data can be presented in a way that any object is presented in that programming language.
+	
+	Django uses Object-relational mapping(ORM) with regards to its Model-View-Controller (MVC) model.
+	The data models and a relational database (Model) are manipulated with the ORM strategy to interact with the databases.
+		
+	
+	\subsubsection{Advantages}
+	\begin{itemize}
+	\item
+	The advantage of using object-relational mappers with databases in particular is that joins aren't used that often as object types can be followed by means of referencing pointers. 
+	\item
+	Relationships are also established by means of pointers which can increase efficiency for complex data.
+	\item
+	This approach works well for large amounts of data, as the object can be manipulated easily for each field.
+	\end{itemize}
+	
+	\subsubsection{Disadvantages}
+	
+	\begin{itemize}
+	\item
+	 Inefficient when used with small databases as objects will still be created which might be less efficient than a quick lookup of those particular fields. 
+	\end{itemize}
+	
+	
+	\clearpage
+	
+	\subsubsection{Application Server}\label{subsec: ApplicationServer}
+	Software framework for web applications and a server to run the environment, is the principle that Application Server approach follows. An example of Application Server architecture framework is the Java EE framework. This architecture is based on the Layer model and Client-Server model and contains a service layer which is accessed by the developer.
+	Django supports Java EE based Application Server.
+	
+	\subsubsection{Advantages}
+	\begin{itemize}
+	\item Scalability 
+		\begin{itemize}
+		\item Resources are allocated efficiently
+		\item Objects reuse is ensured
+		\end{itemize}
+	\item Integrability
+		\begin{itemize}
+			\item Integrates well with REST
+			\item Database integration is provided
+		\end{itemize}
+	\item Security
+		\begin{itemize}
+		\item Authentication and confidentiality is supported
+		\end{itemize}
+	\end{itemize}
+	
+	\subsubsection{Disadvantages}
+	\begin{itemize}
+	\item Uses a lot of system resources which might not necessarily be 
+	\item Relies on server to be running at all times 
+	\item Central point access can choke overall network's access to the server
+	
+	\end{itemize}
+	%	\subsection{Service-Orientated Architecture }
+
+	
+	%	\subsubsection{Advantages}
+	%	\subsubsection{Disadvantages}
+
+
+\clearpage
+\subsection{Reference Frameworks}\label{sec: RefFrameworks}
+
+
+	\subsubsection{Django}\label{subsec: Django}
+	Django is a web framework, written in Python which uses the Model-View-Controller architectural pattern, or MVC for short.
+	Django's main aim is to provide a framework on which to build websites that are primarily based on complex databases.
+	The use of Object-relational mapper in Django's MVC is described in \ref{subsec: ORM}. Django processes HTTP requests by means of a web templating system and regular-expression URL control (View and Controller).
+	\\ \\
+	\textbf{Django further includes:}
+	\begin{itemize}
+		\item Its own web server for developmental purposes.
+		\item Form validation and storing of form data in database
+		\item Caching framework with several cache methods
+		\item Serialization system to produce and interpret XML and JSON representation of model instances.
+		\item Python unit test framework
+	\end{itemize}
+	Django database support:
+	\begin{itemize}
+		\item PostgreSQL
+		\item MySQL
+		\item SQLite
+		\item Oracle
+		\item Microsoft SQL Server (through django-mssql)
+	\end{itemize}
+	Django can be used with:
+	\begin{itemize}
+		\item Python (Supported by default)
+		\item JavaScript (through Swig)
+		\item Ruby (through Liquid)
+		\item Perl (through Template::Swig)
+		\item PHP (Twig)
+	\end{itemize}
+
+	We prefer to use Django as it does have a slight learner curve, but will ease integrability with regards to our Android application.
+	
+	
+	\subsubsection{Honorable Framework Mentions}
+	\begin{itemize}
+	
+	
+	\item\textbf{AngularJS}\label{subsubsec: AngularJS} \\
+	Web-framework making use of client-side Model–View–Controller model. 
+		AngularJS makes use of the MEAN stack for its front-end, consisting of MongoDB database, Express.js web application server framework, Angular.js itself, and Node.js runtime environment.
+		We prefer to use a server side approach as this eases integrability and simplifies implementation.
+	\item\textbf{Ruby on Rails}\label{subsubsec: Rails} \\
+		Ruby based web-framework based on Ruby programming language. "Rails" uses a Model-View-Controller based model and emphasizes the use of JSON and XML for data transfer.
+		Since Ruby has a high learning curve compared to Python for example, we prefer to use Django instead.
+	\item\textbf{Zend Framework}\label{subsubsec: Zend}\\
+	 Zend is an open source, object-oriented web application framework implemented in PHP 5. Zend supports multiple database systems and MVC is the preferred model of development.
+	 Since Zend uses only Object-Orientated PHP5 we decided against this approach as the integration might be difficult for our Android Application.
+	 \item\textbf{Bootstrap}\label{subsubsec: Bootstrap}\\
+	 Bootstrap is a front-end framework for creating websites and applications. It is mainly used for interface development and design. Bootstrap can be used in HTML, CSS and JavaScript. 
+	 We decided on a Server-side approach rather than a front-end approach such as Bootstrap.
+	\end{itemize}
+		
+		
 	\cleardoublepage
 	\section{Functional Requirements and Application Design}\label{sec:functional}
 		\subsection{Use Case Prioritization}
