--- a/Notes/Architectural Tactics/Architectural Tactics.tex
+++ b/Notes/Architectural Tactics/Architectural Tactics.tex
@@ -154,16 +154,14 @@
 		\end{itemize}
 		\item Integrability
 		\begin{itemize}
-			\item User's document entries should not be able to be deleted, if it is a case where the document will not be completed it should remain in the system and be terminated.
-			\item A user with no admin rights should not have access to admin privileges so that the system's data may remain integrable and safe.
-			\item The system should not ever be in a state where it is under pressure and the data is at risk of becoming corrupted. The system should be designed to handle the pressure for which it has been specified to handle.
+
 			
 			\item Tactics
 			\begin{itemize}
-				\item Publish contracts
-				\item Support pluggable adapters
+				
+				\item Support communication channels
 					\begin{itemize}
-						\item Logging
+						\item The system will be made web browser independent to support the usual communication channels. Java will be used to integrate Android and the API.
 					\end{itemize}
 			\end{itemize}			
 		
@@ -171,13 +169,12 @@
 		\end{itemize}
 		\item Cost
 		\begin{itemize}
-			\item All software used should not be proprietary but rather open source so as to minimise cost as much as possible.
 			
 			\item Tactics
 			\begin{itemize}
-				\item List of open source software to follow..
+				\item Open source software
 					\begin{itemize}
-						\item Logging
+						\item The software used will be open software. Programming languages may include Java and python, frameworks like bootstrap and django and so on. 
 					\end{itemize}
 			\end{itemize}			
 			
